Fixed bug where text had unlimited space, and rendering bug on tooltips on mobile whereby text and image would re-arrange in to a single column and not one row.

--- a/css/style.less
+++ b/css/style.less
@@ -494,13 +494,13 @@ box-shadow: 0px 0px 5px @gray;
                                         border:5px solid @black;
                                         }
                                     .textWithImg{
-                                                                              padding-bottom:10px;
-
+                                        padding-bottom:10px;
                                             font-family: "futura-pt-1","futura-pt-2", sans-serif;
                                     font-size:14px;
                                     line-height:14px;
                                         text-overflow: ellipsis;
                                             overflow: hidden;
+                                            max-height:197px;
                                         width: 130px;
                                             float: left;
                                         
@@ -513,9 +513,9 @@ box-shadow: 0px 0px 5px @gray;
                                     line-height:14px;
                                         clear:both;
                                         float:left;
-                                        text-overflow: ellipsis;
+        text-overflow: ellipsis;
                                             overflow: hidden;
-                                        width:100%;
+                                            max-height:197px;                                        width:100%;
 //                                                                    margin-bottom:30px;
 
                                         }
@@ -613,13 +613,14 @@ box-shadow: 0px 0px 5px @gray;
                                         border:5px solid @black;
                                         }
                                     .textWithImg{
-                                                                              padding-bottom:10px;
+                                           padding-bottom:10px;
 
                                             font-family: "futura-pt-1","futura-pt-2", sans-serif;
                                     font-size:14px;
                                     line-height:14px;
-                                        text-overflow: ellipsis;
+                                                text-overflow: ellipsis;
                                             overflow: hidden;
+                                            max-height:197px;
                                         width: 130px;
                                             float: left;
                                         
@@ -632,8 +633,9 @@ box-shadow: 0px 0px 5px @gray;
                                     line-height:14px;
                                         clear:both;
                                         float:left;
-                                        text-overflow: ellipsis;
+                                            text-overflow: ellipsis;
                                             overflow: hidden;
+                                            max-height:197px;
                                         width:100%;
 //                                                                    margin-bottom:30px;
 
@@ -1163,12 +1165,18 @@ box-shadow: 0px 0px 5px @gray;
                                     font-size:14px;
                                     line-height:14px;
                                             margin-left: 10px;
-                                            text-overflow: ellipsis;
                                             width: 125px;
                                             float: left;
+                                                    text-overflow: ellipsis;
                                             overflow: hidden;
+                                            max-height:197
+                                            px;
                                         }
                                     .text{
+                                        
+                                                text-overflow: ellipsis;
+                                            overflow: hidden;
+                                            max-height:197px;
                                                                               padding-bottom:10px;
 
                            //             font-family: "futura-pt-1","futura-pt-2", sans-serif;
@@ -1203,7 +1211,7 @@ box-shadow: 0px 0px 5px @gray;
             }
 html{
         overflow:hidden;
-      /*  .infoBox{
+        .infoBox{
             width:100%;
             //.socialLinkage{
             //    width:100%;
@@ -1224,7 +1232,7 @@ html{
                             }
                     }
               //  }
-            }*/
+            }
     body{
 //        min-height:416px;
       margin:0px;
@@ -1609,8 +1617,10 @@ html{
                                         float:left;
                                         }
                                     .textWithImg{
-                                                                              padding-bottom:10px;
-
+                                                text-overflow: ellipsis;
+                                            overflow: hidden;
+                                            max-height:197px;
+                                       padding-bottom:10px;
                                         margin-top:10px;
                                         clear:left;
                                         float:left;
@@ -1619,6 +1629,9 @@ html{
                                     .text{
 //                                        width:280px;
                            // margin-bottom:30px;
+                                                text-overflow: ellipsis;
+                                            overflow: hidden;
+                                            max-height:197px;
                                         padding-bottom:10px;
                                         margin-top:10px;
                                         width:90% !important;
